# foxhound

./: LICENSE  README.md  pyproject.toml
foxhound/: __init__.py
foxhound/configuration/: __init__.py  api.py  configuration_reader.py
foxhound/core/: api.py  base_model.py  component.py  component_definition.py  component_metadata.py  container.py  inflation.py  result.py  signature_tools.py  typing_tools.py  wiring.py  wiring_task.py
