[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'foxhound'
version = '0.1.0'
description = 'A simple dependency injection framework for Python'
readme = 'README.md'
requires-python = '>=3.9'
license = {text = 'MIT'}
authors = [
    {name = 'Tomash25'}
]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'pydantic>=2.0.0',
]

[project.optional-dependencies]
dev = [
    'mypy>=1.0.0',
    'ruff>=0.1.0',
    'pytest>=7.0.0',
    'pytest-cov>=4.0.0',
]

[project.urls]
Homepage = 'https://github.com/Tomash25/foxhound'
Repository = 'https://github.com/Tomash25/foxhound'
Issues = 'https://github.com/Tomash25/foxhound/issues'

[tool.setuptools.packages.find]
where = ['']
include = ['foxhound*']
exclude = ['tests*']

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.lint]
select = [
    'E',   # pycodestyle errors
    'W',   # pycodestyle warnings
    'F',   # pyflakes
    'I',   # isort
    'N',   # pep8-naming
    'UP',  # pyupgrade
    'B',   # flake8-bugbear
    'C4',  # flake8-comprehensions
    'SIM', # flake8-simplify
]
ignore = [
    'E501',  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Allow unused imports in __init__ files

[tool.mypy]
python_version = '3.9'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['est_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = [
    '--strict-markers',
    '--strict-config',
    '--cov=foxhound',
]